refactor: styling change on home for mobile, solve invalid token bug

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -4,7 +4,7 @@
   "postedAt": "Posted {{time}}",
   "by": "By <0>{{author}}</>",
   "comments": "Comments",
-  "poweredByClusters": "Powered by <0>Clusters API</0> - Made by <1>leojuriolli7</1>",
+  "poweredByClusters": "Powered by <0>Cluster API</0> - Made by <1>leojuriolli7</1>",
   "required": "Required",
   "emailInvalid": "Not a valid e-mail",
   "min": "Minimum of {{min}} characters",
